# aoc2023

./: Cargo.toml
day1/src/: main.rs
src/utils/: utils.rs
