[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "utils"
path = "src/utils/utils.rs"

[[bin]]
name = "day1"
path = "src/day1/bin/main.rs"

[[bin]]
name = "day2"
path = "src/day2/bin/main.rs"